# server

./: CMakeLists.txt
resources/: index.html
src/: client.c  http.c  http.h  server.c  shared.c  shared.h  util.c  util.h
